--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -7,23 +7,23 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "acronymbot": "quay.io/cdis/acronym-bot:master",
-    "arborist": "quay.io/cdis/arborist:2.5.0",
+    "acronymbot": "quay.io/cdis/acronym-bot:2022.03",
+    "arborist": "quay.io/cdis/arborist:2022.03",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "cogwheel": "quay.io/cdis/cogwheel:gen3",
-    "fence": "quay.io/cdis/fence:2021.09",
+    "cogwheel": "quay.io/cdis/cogwheel:2022.03",
+    "fence": "quay.io/cdis/fence:2022.03",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
-    "indexd": "quay.io/cdis/indexd:2021.09",
+    "indexd": "quay.io/cdis/indexd:2022.03",
     "jenkins": "quay.io/cdis/jenkins:master",
-    "peregrine": "quay.io/cdis/peregrine:2021.09",
-    "pidgin": "quay.io/cdis/pidgin:2021.09",
-    "portal": "quay.io/cdis/data-portal:2021.09",
-    "revproxy": "quay.io/cdis/nginx:2021.09",
-    "sheepdog": "quay.io/cdis/sheepdog:2021.09",
-    "spark": "quay.io/cdis/gen3-spark:2021.09",
-    "tube": "quay.io/cdis/tube:2021.09",
-    "dashboard": "quay.io/cdis/gen3-statics:2021.09",
-    "metadata": "quay.io/cdis/metadata-service:2021.09"
+    "peregrine": "quay.io/cdis/peregrine:2022.03",
+    "pidgin": "quay.io/cdis/pidgin:2022.03",
+    "portal": "quay.io/cdis/data-portal:2022.03",
+    "revproxy": "quay.io/cdis/nginx:2022.03",
+    "sheepdog": "quay.io/cdis/sheepdog:2022.03",
+    "spark": "quay.io/cdis/gen3-spark:2022.03",
+    "tube": "quay.io/cdis/tube:2022.03",
+    "dashboard": "quay.io/cdis/gen3-statics:2022.03",
+    "metadata": "quay.io/cdis/metadata-service:2022.03"
   },
   "arborist": {
     "deployment_version": "2"
