--- a/qa-brh.planx-pla.net/manifest.json
+++ b/qa-brh.planx-pla.net/manifest.json
@@ -15,8 +15,8 @@
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "hatchery": "quay.io/cdis/hatchery:0.2.0",
     "indexd": "quay.io/cdis/indexd:2021.11",
-    "metadata": "quay.io/cdis/metadata-service:1.6.2",
-    "portal": "quay.io/cdis/data-portal:3.17.4",
+    "metadata": "quay.io/cdis/metadata-service:feat_agg_server_paging",
+    "portal": "quay.io/cdis/data-portal:test_aggmds_counts",
     "peregrine": "quay.io/cdis/peregrine:2021.11",
     "pidgin": "quay.io/cdis/pidgin:2021.11",
     "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
